--- a/assets/css/gridgraph.css
+++ b/assets/css/gridgraph.css
@@ -1,10 +1,19 @@
 #controls {
-  position: sticky;
+  position: fixed;
+  opacity: 0;
   top: 0;
   left: 0;
+  right: 0;
+  width: auto;
+  margin: 5px;
+  padding: 5px;
   z-index: 9999;
   background-color: rgba(255, 255, 255, 0.7);
   border: 1px solid gray;
+}
+
+#controls:hover {
+  opacity: 1;
 }
 
 h1 {
