--- a/assets/css/gridgraph.css
+++ b/assets/css/gridgraph.css
@@ -61,3 +61,38 @@ input[type=range] {
 .noBorder .tree {
   border-bottom: 2px white solid !important;
 }
+
+#tooltip {
+  position: fixed;
+  width: 50%;
+  bottom: 0;
+  right: 0;
+  text-align: right;
+  padding: 5px;
+  color: gray;
+  font-size: small;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+#tooltip ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#tooltip li {
+  display: inline-block;
+  padding: 0;
+}
+
+#tooltip li:after {
+  content: ';';
+}
+
+#tooltip li:not(:first-child):before {
+  content: ' ';
+}
+
+#tooltip.hidden {
+  display: none;
+}
