--- a/assets/css/gridgraph.css
+++ b/assets/css/gridgraph.css
@@ -41,7 +41,6 @@ fieldset p {
 
 img {
   width: 100%;
-  height: 100%;
 }
 
 .tree {
@@ -50,6 +49,24 @@ img {
 
 .tree a {
   text-decoration: none;
+}
+
+.label:after {
+  content: attr(data-label);
+  color: gray;
+  font-size: smaller;
+  font-style: italic;
+  display: block;
+  position: relative;
+  padding: 0.1em;
+  bottom: 1.6em;
+  margin-bottom: -1.4em;
+  text-align: right;
+  z-index: 999;
+}
+
+.noBorder .label:after {
+  display:none;
 }
 
 input[type=range] {
